2006-05-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* build.config.sample:
	* build.properties:
	* build.xml:
	  change "release" type to "stripped" type

2006-05-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* build.xml:
	  now actually fix make distcheck by disting jst code

2006-05-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* build.xml:
	  fix distcheck; it was actually building inplace and thus
	  not catching missing jst code

2006-05-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* README:
	  update properties in use
	* src/com/fluendo/player/Cortado.java: (Cortado),
	(Cortado.getParameterInfo), (Cortado.shutdown), (Cortado.init),
	(AboutFrame.AboutFrame):
	* src/com/fluendo/player/Status.java:
	  use a double for duration, is more intuitive than HMMSS
	  only mention audio backend details if the applet is configured to
	  play audio
	  show VM information in about box

2006-05-19  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Cortado.java: (Cortado),
	(Cortado.getParameterInfo), (Cortado.init):
	Remove some unused properties

2006-05-17  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* src/com/fluendo/player/Cortado.java: (Cortado.stringToTime):
	Bounds checking!

2006-03-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/com/fluendo/plugin/AudioSinkJ2.java: (AudioSinkJ2.write):
	* src/com/fluendo/plugin/AudioSinkSA.java:
	(AudioSinkSA...RingReader.RingReader):
	  fix more warnings, one error left

2006-03-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/com/fluendo/plugin/AudioSink.java:
	(AudioSink.RingBuffer.acquire):
	* src/com/fluendo/plugin/OggDemux.java:
	(OggDemux...OggStream.pushPacket):
	* src/com/fluendo/plugin/TheoraDec.java: (TheoraDec.),
	(TheoraDec..getFirstTs):
	* src/com/fluendo/plugin/VorbisDec.java: (VorbisDec.),
	(VorbisDec..getFirstTs):
	  Fix some warnings

2006-03-20  Thomas Vander Stichele  <thomas at apestaart dot org>
